fix too much padding in y axis

--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ section {
 
 .form-control {
     font-size: 0.9em;
-    padding: 0.6em 0.4em;
+    padding: 0.5em 0.4em;
     transition: all 0.2s linear;
     outline: none;
     background: #f4f4f4;
